fix bug put spacing back between content and link

--- a/ds_judgements_public_ui/sass/includes/_help_end_document_marker.scss
+++ b/ds_judgements_public_ui/sass/includes/_help_end_document_marker.scss
@@ -12,7 +12,7 @@
 
     margin-top: $space-2;
     padding: $space-2;
-    padding-top: $space-1;
+    padding-top: $space-12;
 
     background-color: colour-var("background");
 
